--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ddbb99;
   background-color: #242424;
 
   font-synthesis: none;
@@ -18,11 +18,19 @@
 }
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  margin: 0;
   min-width: 320px;
   min-height: 100vh;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  place-items: center;
+  gap: 30px;
 }
 
 h1 {
