--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   place-items: center;
   gap: 30px;
+  text-align: center;
 }
 
 h1 {
@@ -38,15 +38,15 @@ h1 {
   line-height: 1.1;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+nav {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  text-decoration: underline;
+  font-size: 30px;
+}
+
+.iconify {
+  cursor: pointer;
+}
